--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,18 +3,24 @@
 @tailwind utilities;
 /* rgb(24, 25, 29) */
 /* rgb(51, 54, 59) */
-:root {
-  --foreground-rgb: 256, 256, 256;
-  --background-start-rgb: 20, 20, 20;
-  --background-end-rgb: 40, 40, 40;
-}
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 1.5;
+  letter-spacing: 0.00938em;
+}
+
+.sidebar-container {
+  border-right: 1px solid rgba(0, 0, 0, 0.12);
+  background-color: #081627;
+}
+
+.sidebar-menu-container {
+  background-color: #101f33;
+}
+
+.header-content {
+  width: calc(100% + 8px);
 }
